Removendo href de button disabled

--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                                 </div>
 
                                 <a
-                                    href="https://github.com/mellomaths/magibot"
+                                    href="_"
                                     target="_blank"
                                     class="btn btn-primary disabled mr-1"
                                     >Repositório</a
