Alterando o botao do artigo

--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
                             que segue o padrão HATEOAS...
                         </p>
                         <a
-                            class="btn btn-secondary btn-lg"
+                            class="btn btn-light btn-lg"
                             href="https://medium.com/@mellomatheuslima/a-import%C3%A2ncia-do-hateoas-em-apis-restful-1ca2dc081288"
                             role="button"
                             target="_blank"
