--- a/index.html
+++ b/index.html
@@ -605,14 +605,31 @@
             </p>
             <a
               class="btn btn-light btn-lg"
-              href="https://medium.com/@mellomatheuslima/a-import%C3%A2ncia-do-hateoas-em-apis-restful-1ca2dc081288"
+              href="https://medium.com/@mellomaths/a-import%C3%A2ncia-do-hateoas-em-apis-restful-1ca2dc081288"
               role="button"
               target="_blank"
               >Leia mais</a
             >
           </div>
           <hr class="my-4" />
+          <div class="p-4 p-md-5 text-white rounded bg-primary">
+            <h3 class="display-6 font-italic">
+              Ética em Inteligência Artificial
+            </h3>
+            <!-- <hr class="my-4" /> -->
+            <p class="lead text-white font-weight-bold">
+              Um dos casos mais famosos que repercutiu no mundo sobre a utilização ética de inteligências artificiais (IA) é o caso do canadense, Joshua Barbeau, que utilizou um sistema de IA para simular uma troca de mensagens com sua noiva falecida. O Project December, sistema utilizado por Joshua, foi construído com base em um modelo de linguagem autorregressivo chamado GPT-3, desenvolvido pela empresa OpenAI. Esse modelo usa Deep Learning para produzir textos semelhantes ao humano, passando facilmente pelo teste de Turing, ou seja, ele é capaz de gerar textos tão semelhantes a textos produzidos por humanos que leitores ficam confusos e não sabem dizer se o texto é produzido ou não por um robô....
+            </p>
+            <a
+              class="btn btn-light btn-lg"
+              href="https://medium.com/@mellomaths/%C3%A9tica-em-intelig%C3%AAncia-artificial-bd6e86402efe"
+              role="button"
+              target="_blank"
+              >Leia mais</a
+            >
+          </div>
         </div>
+        
       </section>
     </section>
 
